# LISSA

./: .gitignore  README.md  pyproject.toml  setup.py  strucutre.txt
docs/: index.html  lissa.html  search.js
docs/lissa/: ml.html  pca.html  picture.html  processing.html
examples/: analise_bic_aic.ipynb  analise_dados_PCA.ipynb  analise_dados_PCA_separador.ipynb  analise_modelos_hmm.ipynb  analise_modelos_hmm_direta.ipynb  analise_modelos_hmm_direta_l2norm _dynamax.ipynb  analise_modelos_hmm_direta_n_features.ipynb  analise_simples.ipynb  claudiohmm_hsmm_markov_test.ipynb  dynamax_arhmm_example.ipynb  filters.ipynb  frequency.ipynb  gamma_test.ipynb  generalHMM_example.ipynb  medianTest.ipynb  medianTest_direto.ipynb  medians  propriedades.csv  pump_data_cleaning.ipynb  saveA.csv  saveA_direto.csv  saveA_direto_run_nova_teste.csv  scale.ipynb  tabela_posprocessamento.csv  teste.ipynb  teste_boxcox.ipynb  teste_gmm.ipynb  teste_otherthing.ipynb
examples/.ipynb_checkpoints/: analise_dados_PCA-checkpoint.ipynb  analise_modelos_hmm_direta_l2norm _dynamax-checkpoint.ipynb  analise_modelos_hmm_direta_n_features _dynamax-checkpoint.ipynb  experiment-checkpoint.ipynb  pump_data_cleaning-checkpoint.ipynb  teste-checkpoint.ipynb
examples/aicbic_analysis/: gmm_aic.csv  gmm_bic.csv  hmm_aic.csv  hmm_bic.csv
examples/deprecated/: analise_dados_PCA_separador.ipynb  analise_modelos_hmm_direta_n_features.ipynb  frequency.ipynb  generalHMM_example.ipynb  medianTest.ipynb  prototipo.py  (+2 more)
lissa.egg-info/: PKG-INFO  SOURCES.txt
src/: ml.py  pca.py  picture.py  processing.py
(+43 files in other folders)
