[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lissa"
version = "2025.01.31"

description = "Library Intend to Solve Special Assignments"

requires-python = ">= 3.8"

authors = [
  {name = "Paulo Kuga", email = "p204451@dac.unicamp.br"},
]
maintainers = [
  {name = "Paulo Kuga", email = "p204451@dac.unicamp.br"},
]

readme = "README.md"

dependencies = [
  "pandas",
  "matplotlib",
  "scikit-learn",
  "statsmodels",
  "hmmlearn",
  "numpy"
]